grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) => choice($._declaration, $._expression),

    // =========================================================================
    // Declarations
    // =========================================================================
    let_declaration: ($) =>
      seq('let', field('pattern', $._pattern), '=', field('value', $._expression)),

    _expression: ($) => $._pipe_or_binary,

    _pipe_or_binary: ($) =>
      choice(
        $.pipe_expression,
        $._binary,
      ),

    pipe_expression: ($) =>
      prec.left(PREC.PIPE, seq(
        field('left', $._pipe_or_binary),
        '|>',
        field('right', $._binary),
      )),

    _binary: ($) =>
      choice(
        $.binary_expression,
        $._unary,
      ),

    binary_expression: ($) =>
      choice(
        prec.left(PREC.OR, seq(field('left', $._binary), '||', field('right', $._binary))),
        prec.left(PREC.AND, seq(field('left', $._binary), '&&', field('right', $._binary))),
        prec.left(PREC.EQUALITY, seq(field('left', $._binary), choice('==', '!='), field('right', $._binary))),
        prec.left(PREC.COMPARE, seq(field('left', $._binary), choice('<', '<=', '>', '>=', 'in', '~='), field('right', $._binary))),
        prec.left(PREC.ADD, seq(field('left', $._binary), choice('+', '-'), field('right', $._binary))),
        prec.left(PREC.MUL, seq(field('left', $._binary), choice('*', '/', '%'), field('right', $._binary))),
      ),

    _unary: ($) =>
      choice(
        $.unary_expression,
        $._postfix,
      ),

    unary_expression: ($) =>
      prec(PREC.UNARY, seq(choice('!', '-'), field('operand', $._unary))),

    _postfix: ($) =>
      choice(
        $._primary,
        $.call_expression,
        $.field_expression,
        $.index_expression,
      ),

    call_expression: ($) =>
      prec.left(PREC.POSTFIX, seq(
        field('function', $._postfix),
        '(',
        field('arguments', commaSep($._expression)),
        ')',
      )),

    field_expression: ($) =>
      prec.left(PREC.POSTFIX, seq(
        field('object', $._postfix),
        '.',
        field('field', $.identifier),
      )),

    index_expression: ($) =>
      prec.left(PREC.POSTFIX, seq(
        field('object', $._postfix),
        '[',
        field('index', $._expression),
        ']',
      )),

    // =========================================================================
    // Primary expressions
    // =========================================================================
    parenthesized_expression: ($) => seq('(', $._expression, ')'),

    env_reference: ($) =>
      seq('env', '.', field('name', $.identifier)),

    // =========================================================================
    // Control flow
    // =========================================================================
    if_expression: ($) =>
      prec.right(seq(
        'if',
        field('condition', $._expression),
        field('then', $.block),
        optional(seq('else', field('else', choice($.block, $.if_expression)))),
      )),

    match_expression: ($) =>
      seq(
        'match',
        field('value', $._expression),
        '{',
        commaSep($.match_arm),
        optional(','),
        '}',
      ),

    match_arm: ($) =>
      seq(
        field('pattern', $._pattern),
        optional(field('guard', $.match_guard)),
        '=>',
        field('body', $._expression),
      ),

    match_guard: ($) =>
      seq('if', field('condition', $._expression)),

    // =========================================================================
    // Lambdas
    // =========================================================================
    lambda_expression: ($) =>
      seq(
        '|',
        field('params', commaSep($.identifier)),
        '|',
        field('body', $._expression),
      ),

    // =========================================================================
    // Run expressions
    // =========================================================================
    run_expression: ($) =>
      choice(
        seq(
          'run',
          field('target', $.identifier),
          optional(field('args', $.object)),
          optional(field('with', $.with_clause)),
        ),
        seq('run', field('block', $.run_block)),
      ),

    check_expression: ($) =>
      seq('check', field('body', $.check_block)),

    check_block: ($) =>
      seq('{', repeat($._check_item), '}'),

    _check_item: ($) =>
      choice(
        $.stream_check,
        $.when_rule,
        $._expression,
      ),

    // Stream aggregation: all(ok), any(code == 500), none(err)
    stream_check: ($) =>
      seq(
        field('aggregator', $.stream_aggregator),
        '(',
        field('condition', $._expression),
        optional(seq('->', field('severity', $.severity), field('title', $.string))),
        ')',
      ),

    stream_aggregator: ($) => choice('all', 'any', 'none'),

    severity: ($) => choice('high', 'medium', 'low'),

    emit_expression: ($) =>
      prec.left(PREC.PRIMARY, seq(
        'emit',
        optional(seq(
          token.immediate('.'),
          field('format', $.identifier),
          optional(seq(token.immediate('('), field('args', commaSep($._expression)), ')')),
        )),
      )),

    // =========================================================================
    // Generators and packs
    // =========================================================================
    generator_expression: ($) =>
      prec.left(PREC.PRIMARY, seq(
        '~',
        field('kind', $.identifier),
        optional(seq(token.immediate('('), field('args', commaSep($._expression)), ')')),
      )),

    pack_expression: ($) =>
      prec.left(PREC.PRIMARY, seq('@', field('source', choice($.pack_path, $.identifier, $.string)))),

    pack_path: ($) =>
      prec.left(PREC.PRIMARY + 1, seq($.identifier, repeat1(seq(token.immediate('.'), $.identifier)))),

    // =========================================================================
    // Ranges
    // =========================================================================
    range_expression: ($) =>
      choice(
        // Full range: start..end or start..=end (most specific, try first)
        prec.left(PREC.COMPARE + 1, seq(
          field('start', $.integer),
          choice('..', '..='),
          field('end', $.integer),
        )),
        // Open-ended: ..end or ..=end
        prec.left(PREC.COMPARE, seq(
          choice('..', '..='),
          field('end', $.integer),
        )),
        // Open-ended: start.. or start..=
        prec.left(PREC.COMPARE, seq(
          field('start', $.integer),
          choice('..', '..='),
        )),
      ),

    // =========================================================================
    // Collections
    // =========================================================================
    array: ($) =>
      seq('[', commaSep($._expression), optional(','), ']'),

    object: ($) =>
      seq('{', commaSep($.field), optional(','), '}'),

    field: ($) =>
      seq(
        field('key', choice($.identifier, $.string)),
        ':',
        field('value', $._expression),
      ),

    block: ($) =>
      seq('{', repeat($._statement), '}'),

    _statement: ($) =>
      choice(
        $._declaration,
        $._expression,
      ),

    // =========================================================================
    // Patterns
    // =========================================================================
    _pattern: ($) =>
      choice(
        $.range_pattern,
        $.identifier,
        $._literal,
        $.wildcard_pattern,
        $.array_pattern,
        $.object_pattern,
      ),

    wildcard_pattern: ($) => '_',

    // Range pattern for match arms: 1..10, ..5, 10..
    range_pattern: ($) =>
      prec.left(1, choice(
        seq(field('start', $._literal), choice('..', '..='), field('end', $._literal)),
        seq(choice('..', '..='), field('end', $._literal)),
        seq(field('start', $._literal), choice('..', '..=')),
      )),

    array_pattern: ($) =>
      seq('[', commaSep($._pattern), optional(','), ']'),

    object_pattern: ($) =>
      seq('{', commaSep($.field_pattern), optional(','), '}'),

    field_pattern: ($) =>
      seq(
        field('key', $.identifier),
        optional(seq(':', field('pattern', $._pattern))),
      ),

    // =========================================================================
    // Literals
    // =========================================================================
    _literal: ($) =>
      choice(
        $.null,
        $.boolean,
        $.float,
        $.integer,
        $.string,
        $.byte_string,
        $.regex,
        $.duration,
        $.size,
      ),

    null: ($) => 'null',

    boolean: ($) => choice('true', 'false'),

    integer: ($) =>
      token(choice(
        /0[xX][0-9a-fA-F]+/,
        /0[oO][0-7]+/,
        /0[bB][01]+/,
        /-?[0-9]+/,
      )),

    float: ($) =>
      token(choice(
        /-?[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/,
        /-?[0-9]+[eE][+-]?[0-9]+/,
      )),

    string: ($) =>
      choice(
        $._double_string,
        $._single_string,
      ),

    _double_string: ($) =>
      seq('"', repeat(choice($._string_content, $.escape_sequence, $.interpolation)), '"'),

    _single_string: ($) =>
      seq("'", repeat(choice($._single_string_content, $.escape_sequence)), "'"),

    escape_sequence: ($) =>
      token.immediate(seq('\\', choice(
        /[\\'"nrtbfv0]/,
        /x[0-9a-fA-F]{2}/,
        /u[0-9a-fA-F]{4}/,
        /u\{[0-9a-fA-F]+\}/,
      ))),

    interpolation: ($) =>
      seq(
        token.immediate('${'),
        $._expression,
        '}',
      ),

    byte_string: ($) =>
      seq('b"', repeat(choice(/[^"\\]+/, $.escape_sequence)), '"'),

    regex: ($) =>
      token(seq(
        '/',
        /[^/\n]+/,
        '/',
        optional(/[gimsuvy]+/),
      )),

    duration: ($) =>
      token(seq(/[0-9]+(\.[0-9]+)?/, choice('ms', 's', 'm', 'h', 'd'))),

    size: ($) =>
      token(seq(/[0-9]+(\.[0-9]+)?/, choice('b', 'kb', 'mb', 'gb', 'tb'))),

    // =========================================================================
    // Identifiers and comments
    // =========================================================================
    identifier: ($) => /[_a-zA-Z][_a-zA-Z0-9]*/,

    line_comment: ($) => token(seq('//', /.*/)),

    block_comment: ($) => token(seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/')),
  },
});
