test/corpus/comments.txt
================================================================================
Line comment
================================================================================

// this is a comment
42

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (integer))

================================================================================
Block comment
================================================================================

/* block
   comment */
42

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (integer))

================================================================================
Inline comment
================================================================================

42 // inline

--------------------------------------------------------------------------------

(source_file
  (integer)
  (line_comment))
