test/corpus/control_flow.txt
================================================================================
If expression
================================================================================

if ok { "yes" }

--------------------------------------------------------------------------------

(source_file
  (if_expression
    condition: (identifier)
    then: (block
      (string))))

================================================================================
If else expression
================================================================================

if ok { "yes" } else { "no" }

--------------------------------------------------------------------------------

(source_file
  (if_expression
    condition: (identifier)
    then: (block
      (string))
    else: (block
      (string))))

================================================================================
If else if chain
================================================================================

if a { 1 } else if b { 2 } else { 3 }

--------------------------------------------------------------------------------

(source_file
  (if_expression
    condition: (identifier)
    then: (block
      (integer))
    else: (if_expression
      condition: (identifier)
      then: (block
        (integer))
      else: (block
        (integer)))))

================================================================================
Match expression
================================================================================

match code {
  200 => "ok",
  401 => "unauthorized",
  _ => "other",
}

--------------------------------------------------------------------------------

(source_file
  (match_expression
    value: (identifier)
    (match_arm
      pattern: (integer)
      body: (string))
    (match_arm
      pattern: (integer)
      body: (string))
    (match_arm
      pattern: (wildcard_pattern)
      body: (string))))

================================================================================
Block expression
================================================================================

{
  let x = 1
  x + 2
}

--------------------------------------------------------------------------------

(source_file
  (block
    (let_declaration
      pattern: (identifier)
      value: (integer))
    (binary_expression
      left: (identifier)
      right: (integer))))
