test/corpus/expressions.txt
================================================================================
Binary arithmetic
================================================================================

1 + 2
3 - 4
5 * 6
7 / 8
9 % 10

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (integer)
    right: (integer))
  (binary_expression
    left: (integer)
    right: (integer))
  (binary_expression
    left: (integer)
    right: (integer))
  (binary_expression
    left: (integer)
    right: (integer))
  (binary_expression
    left: (integer)
    right: (integer)))

================================================================================
Binary comparison
================================================================================

a == b
c != d
e < f
g <= h
i > j
k >= l

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (identifier)
    right: (identifier))
  (binary_expression
    left: (identifier)
    right: (identifier))
  (binary_expression
    left: (identifier)
    right: (identifier))
  (binary_expression
    left: (identifier)
    right: (identifier))
  (binary_expression
    left: (identifier)
    right: (identifier))
  (binary_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Binary logical
================================================================================

x && y
a || b

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (identifier)
    right: (identifier))
  (binary_expression
    left: (identifier)
    right: (identifier)))

================================================================================
In operator
================================================================================

x in xs

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Regex match operator
================================================================================

text ~= /error/i

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (identifier)
    right: (regex)))

================================================================================
Unary operators
================================================================================

!x

--------------------------------------------------------------------------------

(source_file
  (unary_expression
    operand: (identifier)))

================================================================================
Unary negation
================================================================================

-y

--------------------------------------------------------------------------------

(source_file
  (unary_expression
    operand: (identifier)))

================================================================================
Field access
================================================================================

user.id
result.data.name

--------------------------------------------------------------------------------

(source_file
  (field_expression
    object: (identifier)
    field: (identifier))
  (field_expression
    object: (field_expression
      object: (identifier)
      field: (identifier))
    field: (identifier)))

================================================================================
Index access
================================================================================

arr[0]
headers["content-type"]

--------------------------------------------------------------------------------

(source_file
  (index_expression
    object: (identifier)
    index: (integer))
  (index_expression
    object: (identifier)
    index: (string)))

================================================================================
Function call
================================================================================

add(1, 2)
encode_body(req, "base64")

--------------------------------------------------------------------------------

(source_file
  (call_expression
    function: (identifier)
    arguments: (integer)
    arguments: (integer))
  (call_expression
    function: (identifier)
    arguments: (identifier)
    arguments: (string)))

================================================================================
Method call
================================================================================

obj.method(arg)

--------------------------------------------------------------------------------

(source_file
  (call_expression
    function: (field_expression
      object: (identifier)
      field: (identifier))
    arguments: (identifier)))

================================================================================
Pipe expression
================================================================================

run Op |> check { ok } |> emit

--------------------------------------------------------------------------------

(source_file
  (pipe_expression
    left: (pipe_expression
      left: (run_expression
        target: (identifier))
      right: (check_expression
        body: (check_block
          (identifier))))
    right: (emit_expression)))

================================================================================
Array literal
================================================================================

[1, 2, 3]

--------------------------------------------------------------------------------

(source_file
  (array
    (integer)
    (integer)
    (integer)))

================================================================================
Array of strings
================================================================================

["a", "b"]

--------------------------------------------------------------------------------

(source_file
  (array
    (string)
    (string)))

================================================================================
Object literal
================================================================================

{ name: "Alice", age: 30 }

--------------------------------------------------------------------------------

(source_file
  (object
    (field
      key: (identifier)
      value: (string))
    (field
      key: (identifier)
      value: (integer))))

================================================================================
Range expressions
================================================================================

1..10
1..=10

--------------------------------------------------------------------------------

(source_file
  (range_expression
    start: (integer)
    end: (integer))
  (range_expression
    start: (integer)
    end: (integer)))

================================================================================
Parenthesized expression
================================================================================

(1 + 2) * 3

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    left: (parenthesized_expression
      (binary_expression
        left: (integer)
        right: (integer)))
    right: (integer)))

================================================================================
Lambda expression
================================================================================

|x| x * 2

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    params: (identifier)
    body: (binary_expression
      left: (identifier)
      right: (integer))))

================================================================================
Lambda multi param
================================================================================

|a, b| a + b

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    params: (identifier)
    params: (identifier)
    body: (binary_expression
      left: (identifier)
      right: (identifier))))

================================================================================
Environment reference
================================================================================

env.BASE_URL

--------------------------------------------------------------------------------

(source_file
  (env_reference
    name: (identifier)))
