test/corpus/generators_packs.txt
================================================================================
Generator simple
================================================================================

~uuid

--------------------------------------------------------------------------------

(source_file
  (generator_expression
    kind: (identifier)))

================================================================================
Generator with args
================================================================================

~int(-100..100)
~pw(12)

--------------------------------------------------------------------------------

(source_file
  (generator_expression
    kind: (identifier)
    args: (range_expression
      start: (integer)
      end: (integer)))
  (generator_expression
    kind: (identifier)
    args: (integer)))

================================================================================
Pack identifier
================================================================================

@sqli

--------------------------------------------------------------------------------

(source_file
  (pack_expression
    source: (identifier)))

================================================================================
Pack path
================================================================================

@boundary.int32

--------------------------------------------------------------------------------

(source_file
  (pack_expression
    source: (pack_path
      (identifier)
      (identifier))))

================================================================================
Pack string path
================================================================================

@"payloads/common.txt"

--------------------------------------------------------------------------------

(source_file
  (pack_expression
    source: (string)))
