test/corpus/literals.txt
================================================================================
Null literal
================================================================================

null

--------------------------------------------------------------------------------

(source_file
  (null))

================================================================================
Boolean literals
================================================================================

true
false

--------------------------------------------------------------------------------

(source_file
  (boolean)
  (boolean))

================================================================================
Integer literals
================================================================================

42
-10
0xFF
0o755
0b1010

--------------------------------------------------------------------------------

(source_file
  (integer)
  (integer)
  (integer)
  (integer)
  (integer))

================================================================================
Float literals
================================================================================

3.14
1e6

--------------------------------------------------------------------------------

(source_file
  (float)
  (float))

================================================================================
Float with exponent
================================================================================

-2.5e-3

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
String literals
================================================================================

"hello"
'single'

--------------------------------------------------------------------------------

(source_file
  (string)
  (string))

================================================================================
String with escape
================================================================================

"with \"escape\""

--------------------------------------------------------------------------------

(source_file
  (string
    (escape_sequence)
    (escape_sequence)))

================================================================================
String interpolation
================================================================================

"/users/${id}"

--------------------------------------------------------------------------------

(source_file
  (string
    (interpolation
      (identifier))))

================================================================================
Byte string
================================================================================

b"raw bytes"

--------------------------------------------------------------------------------

(source_file
  (byte_string))

================================================================================
Regex literal
================================================================================

/error/i

--------------------------------------------------------------------------------

(source_file
  (regex))

================================================================================
Regex with flags
================================================================================

/[a-z]+/g

--------------------------------------------------------------------------------

(source_file
  (regex))

================================================================================
Duration literals
================================================================================

10ms
5s
2m

--------------------------------------------------------------------------------

(source_file
  (duration)
  (duration)
  (duration))

================================================================================
Size literals
================================================================================

1kb
100mb
2gb

--------------------------------------------------------------------------------

(source_file
  (size)
  (size)
  (size))
